# task-management

./: .env.example  .gitignore  CLAUDE.md  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  pyproject.toml  styles.css  tsconfig.json
app/: config.py  database.py  exceptions.py  main.py
app/models/: __init__.py  check_item.py  daily_note.py  daily_task.py  event.py  project.py  subtask.py  task.py  time_entry.py
app/routers/: check_items.py  daily.py  events.py  gantt.py  milestones.py  projects.py  reports.py  subtasks.py  task_pages.py  tasks.py
app/schemas/: check_item.py  daily.py  event.py  project.py  report.py  subtask.py  task.py
app/services/: check_item_service.py  daily_service.py  event_service.py  project_service.py  report_service.py  subtask_service.py  task_service.py
app/static/: frappe-gantt.min.js  gantt.js  style.css
app/templates/: base.html  checks.html  daily.html  events.html  gantt.html  milestones.html  project_form.html  task_form.html
scripts/: backup.py  restore.py
skills/frontend-gantt/: SKILL.md
skills/python-backend/: SKILL.md
skills/ui-customization/: SKILL.md
src/: EventModal.ts  TimelineRenderer.ts  TimelineView.ts  main.ts  types.ts  utils.ts
tests/: conftest.py
tests/test_models/: test_check_item.py  test_event.py  test_project.py  test_subtask.py  test_task.py
tests/test_routers/: test_check_items.py  test_events.py  test_gantt.py  test_main.py  test_milestones.py  test_projects.py  test_reports.py  test_subtasks.py  test_task_pages.py  test_tasks.py
(+11 files in other folders)
